# word-generator

./: .gitignore  CMakeLists.txt  Generator.cpp  Generator.hpp  LevenshteinDistance.cpp  Main.cpp  Model.cpp  Model.hpp  NameGenerator.cpp  NameGenerator.hpp  README.md  Random.cpp  Random.hpp  TrainingData.cpp  TrainingData.hpp  conanfile.txt  training-data.json
src/: Generator.cpp  Generator.hpp  LevenshteinDistance.cpp  LevenshteinDistance.hpp  Main.cpp  Model.cpp  Model.hpp  NameGenerator.cpp  NameGenerator.hpp  Random.cpp  Random.hpp  TrainingData.cpp  TrainingData.hpp  Version.hpp  Version.hpp.in
training-data/: unix-commands.json
